Completed Footer, added Socail links and solved mobile layout bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,13 @@ header {
     padding-right: 30px;
     padding-left: 30px;
 }
+/*---------------------------------------Video Promo Section*/
+.youtubeplayer {
+    text-align: center;
+    padding-top:100px;
+    margin:1.5em;
+    opacity: 50%;
+}
 
 /*---------------------------------------Gallery Section*/
 
@@ -260,6 +267,8 @@ header {
     background-color: #e6e6e6;
     margin:3em;
     padding: 0.5em;
+    margin-top: 70px;
+    margin-bottom: 80px;
 }
 .display-4 {
     font-size: 10pt;
@@ -269,27 +278,14 @@ header {
     font-size: 8pt;
 }
 /*---------------------------------------Contact Us & Map Section*/
-.contactus-box {
-        max-width: 80%;
-        height: 400px;
-        background-image: url(../images/gym11.jpg);
-        background-repeat:no-repeat;
-        background-size:cover;
-        background-position: top;
-        margin-left: 100px;
-        margin-right: 0;
-        border-style: solid;
-        border-color: #1b1c1b;
-        border-width: 2px;
-}
 .form-column {
-    margin-left: 8em;
+    margin-left: 8.25em;
     
 }
 .form-column form {
     background-image: url(../images/gym11.jpg);
     background-size: cover;
-    height:400px;
+    height:425px;
     padding: 30px;
     padding-top:40px;
     border: 1px solid;
@@ -301,26 +297,39 @@ header {
     opacity: 80%;
 }
 
-
 #inputmessage3 {
     height: 200px;
 }
 
- /* Always set the map height explicitly to define the size of the div
-       * element that contains the map. */
-      #map {
-        height: 100%;
-      }
-      /* Optional: Makes the sample page fill the window. */
-      html, body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-      }
+#map {
+    margin-left: 5em;
+}
+.social-feeds { 
+    background-color: rgba(0,0,0,.125);
+    border: #1b1c1b solid 2px;
+    margin-left:5em;
+    height: 195px;
 
+}
+.social-heading {
+    font-family: gloss;
+    color: #1b1c1b;
+    text-align: left;
+    line-height: 50px;
+    padding-left: 20px;
+}
+.social-links i {
+    font-size: 50px;
+    color:#1b1c1b;
+    padding-top: 30px;
+    padding-left:10px;
+    
+}
 
-
-
+#socialimage {
+    max-width: 100%;
+    margin-left: 2em;
+}
 
 /*----------------------------------Media Queries*/
 
@@ -356,29 +365,61 @@ header {
     font-family: gloss;
     letter-spacing: 3px;
     color: #000000;
-    font-size:2.5em;
+    font-size:2em;
+    padding-bottom: 30px;
+    margin-left: 2.5%;
 }
+#about-movement, #about-workouts, #about-community {
+    font-size: 1.5em;
+}
+.youtubeplayer {
+    max-width: 90%;
+}
+
+
 #gallery-section img {
     max-width: 90%;
     padding-bottom: 30px;
     padding-left: 1.5em;
 }
-.card {
-    margin-left: 20px;
+.card-deck {
+    margin:1em 5em 1em 5em;
+}
+.card-deck .card {
+    margin-bottom:40px;
 }
 
 .jumbotron {
     padding: 1em;
 }
-}
+
 .contactus-form {
-    max-height: 350px;
+    max-height: 425px;
     margin-left: 10%;
 }
 .form-column {
-    margin: 0;
+    margin: 1em;
     
 }
 .form-column form {
-    height: 500px;
+    height: 550px;
 }
+
+#map {
+    margin: 1em;
+}
+.social-feeds { 
+    margin:1em;
+    height: 150px;
+}
+.social-links i {
+    font-size: 25px;
+    padding-top: 30px;
+    margin: 0;
+}
+#socialicons {
+    max-width: 75%;
+}
+#socialimage {
+    max-width: 80%;
+    margin-left: 0;
